# cart-pilot

./: .gitignore  README.md  docker-compose.yml
cartpilot-api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
cartpilot-api/alembic/: env.py
cartpilot-api/alembic/versions/: 001_create_products_table.py  002_create_webhooks_tables.py  003_create_orders_table.py
cartpilot-api/app/: __init__.py  main.py
cartpilot-api/app/api/: __init__.py  checkouts.py  health.py  idempotency.py  intents.py  merchants.py  middleware.py  offers.py  orders.py  schemas.py  webhooks.py
cartpilot-api/app/application/: __init__.py  checkout_service.py  idempotency_service.py  intent_service.py  order_service.py  webhook_service.py
cartpilot-api/app/catalog/: __init__.py  generator.py  models.py  repository.py  service.py  taxonomy.py
cartpilot-api/app/domain/: __init__.py  base.py  entities.py  events.py  exceptions.py  state_machines.py  value_objects.py
cartpilot-api/app/infrastructure/: __init__.py  config.py  database.py  merchant_client.py  models.py
cartpilot-api/scripts/: docker-entrypoint.sh  seed_catalog.py
cartpilot-api/tests/: __init__.py  test_health.py
cartpilot-api/tests/api/: conftest.py  test_checkouts.py  test_idempotency.py  test_intents.py  test_merchants.py  test_middleware.py  test_offers.py  test_orders.py  test_webhooks.py
cartpilot-api/tests/catalog/: __init__.py  test_generator.py  test_taxonomy.py
cartpilot-api/tests/domain/: test_checkout.py  test_entities.py  test_intent_offer.py  test_state_machines.py  test_value_objects.py
(+77 files in other folders)
